--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,6 +7,9 @@
         android:showAsAction="always"
         android:title="@string/menu_help"/>
     <item
+        android:id="@+id/menu_tutorial"
+        android:title="@string/menu_tutorial"/>
+    <item
         android:id="@+id/menu_all"
         android:title="@string/menu_restriction_all"/>
     <item
