--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -21,5 +21,6 @@
     <attr name="color_state_attention" format="reference" />
     <attr name="color_state_restricted" format="reference" />
     <attr name="color_state_shared" format="reference" />
+    <attr name="background_tutorial" format="reference" />
 
 </resources>
