--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -14,14 +14,6 @@
         android:orientation="vertical" >
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="6dip"
-            android:text="@string/msg_edit"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textIsSelectable="false" />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="48dip"
             android:drawableLeft="?attr/icon_used"
@@ -61,15 +53,33 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textIsSelectable="false" />
 
-        <TextView
-            android:id="@+id/help_half"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="48dip"
-            android:drawablePadding="6dip"
-            android:gravity="center_vertical"
-            android:text="@string/help_half"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textIsSelectable="false" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <LinearLayout
+                android:layout_width="48dip"
+                android:layout_height="48dip"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/imgHelpHalf"
+                    android:layout_width="32dip"
+                    android:layout_height="32dip"
+                    android:contentDescription="@string/help_half" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="48dip"
+                android:gravity="center_vertical"
+                android:paddingLeft="6dip"
+                android:text="@string/help_half"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textIsSelectable="false" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
