Use dip everywhere

--- a/res/layout/mainentry.xml
+++ b/res/layout/mainentry.xml
@@ -6,10 +6,10 @@
 
     <View
         android:id="@+id/vwState"
-        android:layout_width="6dp"
+        android:layout_width="6dip"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
-        android:paddingRight="3dp" />
+        android:paddingRight="3dip" />
 
     <ImageView
         android:id="@+id/imgIcon"
@@ -71,12 +71,12 @@
 
         <ImageView
             android:id="@+id/imgCBName"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="32dip"
+            android:layout_height="32dip"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="6dp"
+            android:layout_marginLeft="3dip"
+            android:layout_marginRight="6dip"
             android:contentDescription="@string/title_restrict"
             android:visibility="invisible" />
 
