--- a/res/drawable/tutorial_background_light.xml
+++ b/res/drawable/tutorial_background_light.xml
@@ -7,13 +7,13 @@
     <corners android:radius="20dip" />
 
     <stroke
-        android:width="1dp"
+        android:width="1dip"
         android:color="#808080" />
 
     <padding
-        android:bottom="12dp"
-        android:left="12dp"
-        android:right="12dp"
-        android:top="12dp" />
+        android:bottom="12dip"
+        android:left="12dip"
+        android:right="12dip"
+        android:top="12dip" />
 
 </shape>
