--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -47,7 +47,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="2dip"
                 android:background="@android:color/darker_gray" />
 
             <!-- Icon -->
@@ -153,7 +153,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="1dip"
         android:background="@android:color/darker_gray" />
 
     <!-- What it is all about -->
@@ -193,7 +193,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/tvTutorialDetails"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="6dip"
                 android:text="@android:string/ok" />
         </RelativeLayout>
     </RelativeLayout>
