Moved confidence setting to expert mode

--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -81,6 +81,7 @@
                 android:id="@+id/llConfidence"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dip"
                 android:orientation="horizontal" >
 
                 <TextView
