Added menu to clear usage data

--- a/res/menu/usage.xml
+++ b/res/menu/usage.xml
@@ -7,5 +7,8 @@
     <item
         android:id="@+id/menu_refresh"
         android:title="@string/menu_refresh"/>
+    <item
+        android:id="@+id/menu_clear"
+        android:title="@string/menu_clear_usage"/>
 
 </menu>
