--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -91,8 +91,11 @@
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dip"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:singleLine="true"
                     android:text="@string/settings_confidence"
                     android:textIsSelectable="false" />
 
